--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "axios": "^1.5.1",
     "firebase": "^10.2.0",
     "react": "^18.2.0",
+    "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
