--- a/package.json
+++ b/package.json
@@ -3,16 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.19",
+    "@mui/material": "^5.14.19",
+    "@mui/styled-engine-sc": "^6.0.0-alpha.7",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
+    "bootstrap": "^5.3.2",
+    "boxicons": "^2.1.4",
     "firebase": "^10.2.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.9.1",
     "react-datepicker": "^4.21.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.1",
     "type.js": "^0.0.1",
     "typed.js": "^2.0.16",
     "web-vitals": "^2.1.4"
