--- a/package.json
+++ b/package.json
@@ -12,9 +12,13 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.5.1",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
     "boxicons": "^2.1.4",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
     "firebase": "^10.2.0",
+    "openai": "^4.24.7",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-datepicker": "^4.21.0",
